# data_validation

./: Readme.md  pre-commit-config.yml  pyproject.toml  setup.cfg
app/: apuntes.txt  main.py
app/configs/: metadata.py  settings.py
app/dependencies/: io.py  spark_wrapper.py
app/spark/: spark_script.py
