[tool.poetry]
name = "sdg-prueba-tecnica"
version = "0.1.0"                       
description = "Prueba tecnica SDG"
authors = ["Ares <ares.argiles@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.scripts]
main = "data_validation.main:main"

[tool.poetry.dev-dependencies]
pyspark = "3.4.1"
pre-commit = "3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"